--- a/style.css
+++ b/style.css
@@ -6,3 +6,30 @@ option, select {
     font-family: 'Roboto', sans-serif;
     font-size: 0.95em;
 }
+
+.newRes {
+    display: flex;
+    width: 600px;
+}
+
+.hero {
+    width: 160px;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.games {
+    width: 90px;
+    text-align: left;
+}
+
+.winrate {
+    width: 120px;
+    text-align: left;
+}
+
+.overall-winrate {
+    font-weight: bold;
+    font-size: larger;
+    padding: 20px;
+}
